# PROMISE_implementation

./: .gitignore  readme.md
CentralStation/CentralStation/: pom.xml
CentralStation/runtime-New_configuration/.metadata/: version.ini
CentralStation/runtime-New_configuration/ddvx/: .project  My.promise
CentralStation/workspace/CentralStation/: .project  CMakeLists.txt  pom.xml
CentralStation/workspace/Promise/: .project  representations.aird
CentralStation/workspace/PromisePlugin/: .project  representations.aird
CentralStation/workspace/promise_integration.design/: .classpath  .project
CentralStation/workspace/se.gu.co4robots.promise.edit/: plugin.properties
CentralStation/workspace/se.gu.co4robots.promise.editor/: plugin.properties
sera/devel/: .catkin  .rosinstall  setup.sh
sera/src/communication_manager/: CMakeLists.txt  README.md  package.xml
sera/src/communication_manager/config/: communication_manager_params.yaml
sera/src/communication_manager/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
sera/src/communication_manager/launch/: communication_manager_localmission.launch  ita.launch  ita_1.launch  ita_1_psalm.launch  ita_2.launch  ita_2_psalm.launch  ita_3.launch  ita_3_psalm.launch  pa10.launch  summit.launch  tiago.launch  turtlebot.launch
sera/src/communication_manager/msg/: MissionLocations.msg
sera/src/communication_manager/nodes/: communication_manager_node
sera/src/communication_manager/src/: Publisher.py  Request_Handler.py  Request_Handler_psalm.py  __init__.py  communication_manager.py
(+700 files in other folders)
